@@ -1,5 +1,6 @@
 
 5.2a3 -> 5.2a4:
+    - jbj: yarn: convert rpmwf refcount to usage mutex.
     - jbj: rpmdb: don't bother with the silly structure assignment initialize.
     - jbj: yarn: wire up rpmdsFini, mark rpmdsFree for destruction.
     - jbj: yarn: wire up rpmtsFini, mark rpmtsFree for destruction.
